<resources>
    <string name="app_name">KosmoZahvatchik</string>

    <string name="title_activity_fullscreen">KosmoZahvatchik</string>
    <string name="dummy_button">START_GAME</string>
    <string name="dummy_content">Kosmo\nZahvatchik</string>
    <string name="game_over">GAME\nOVER</string>
    <string name="exit_button">RESTART_GAME</string>

    <string name="title_activity_game_over">GameOver</string>
    <string name="you_win">Your score:</string>
    <string name="hiscore">Best score:</string>
    <string name="admob_app_id">ca-app-pub-9051542338788579~3256817607</string>
    <string name="admob_banner_ad">ca-app-pub-9051542338788579/2109604503</string>
    <string name="admob_banner2_ad">ca-app-pub-9051542338788579/5305687443</string>
    <string name="admob_interstishial_banner_ad">ca-app-pub-9051542338788579/2908902045</string>
    <string name="banner_ad_unit_id" />

</resources>
