<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_black_gameover_color"
    tools:context=".GameOver">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/game_over_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/game_over"
        android:textColor="@color/txt_Gameover_color"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <TextView
        android:id="@+id/txt_gameover_you_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290sp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/you_win"
        android:textAlignment="center"
        android:textColor="@color/txt_Gameover_color"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txt_HI_you_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260sp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/hiscore"
        android:textAlignment="center"
        android:textColor="@color/txt_Gameover_color"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/exit_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit_button"
                android:textAlignment="center" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>